[Input] Fix placeholder fallback z-index.

--- a/components/Input/Input.less
+++ b/components/Input/Input.less
@@ -84,6 +84,7 @@
     right: @side-padding + 1;
     top: 1px;
     white-space: nowrap;
+    z-index: 2;
   }
   .padLeft .placeholder {
     left: @side-padding-padded + 1;
